--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ a{
 }
 #main{
     width: 100%;
-    height:100vh;
+    height:100vh; 
     box-sizing: border-box;
     background-color: #edf1fd;
     position: relative;
@@ -51,7 +51,8 @@ nav{
    color: #292929;
    font-family: poppins;
 }
-.menu li a:hover, .active{
+.menu li a:hover, 
+.active{
     background-color: #292929;
     color: #ffffff !important;
     font-weight: 700;
@@ -77,5 +78,17 @@ nav{
     margin: 0px;
     letter-spacing: 3px;
     color: #292929;
-
+}
+.cv-btn{
+    width: 200px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #292929;
+    color: #ffffff;
+}
+cv-btn:hover{
+    background-color: #131313;
+    transition: all ease 0.5s;
 }
